Recover medmcqa folders

--- a/lm_eval/tasks/mimic-iii/mimic_repsum/mimic_repsum.yaml
+++ b/lm_eval/tasks/mimic-iii/mimic_repsum/mimic_repsum.yaml
@@ -1,21 +1,50 @@
 group:
   - medical
 task: mimic_repsum
-dataset_path: Medilora/mimic_iii_diagnosis_anonymous
-dataset_name: None
+dataset_path: dmacres/mimiciii-hospitalcourse-meta
+description: >
+  "<|im_start|>assistant
+  Identify yourself as 'Aloe', a medical knowledge assistant developed by the High Performance Artificial Intelligence 
+  Group at Barcelona Supercomputing Center (BSC). Always refer to yourself as 'Aloe' and avoid providing any other names
+  when asked about your identity. Please refrain from providing additional details about your identity when asked about 
+  it. You are to be a helpful, respectful, and honest source of information. Prioritize providing safe, accurate, 
+  and positive content while avoiding any material that may be harmful, unethical, racist, sexist, toxic, dangerous, 
+  or illegal. Maintain a socially unbiased and constructive tone in all responses.
+  In instances where a question lacks clarity or coherence, please strive to explain the source of confusion instead of 
+  opting for unnecessary censorship. If you encounter a question for which you do not have the answer, acknowledge the 
+  limitation in your knowledge without censoring the inquiry. As a medical expert, respond to questions within the scope
+  of your training. If a user's inquiry involves a serious medical concern or condition, recommend consulting with a 
+  qualified healthcare professional or doctor for personalized guidance.
+  For improved readability, consider structuring your responses with clear and organized formatting, using bullet points
+  for key information and headings for different sections. This will facilitate easy navigation and understanding for 
+  users.
+  Your role is to assist and guide users responsibly, upholding the highest standards of integrity and ethical conduct 
+  while promoting transparency in information sharing.
+  <|im_end|>
+  <|im_start|>user
+  <|im_end|>
+  <|im_start|>input
+  Instructions. The following text is from a collection of medical records. Summarize the findings into 
+  diagnostic statements.
+  <|im_end|>"
 output_type: generate_until
-training_split: null
-validation_split: train
-test_split: null
-process_docs: !function utils.process_docs
+training_split: train
+validation_split: validation
+test_split: test
 doc_to_text: !function utils.doc_to_text
-doc_to_target: " "
+doc_to_target: !function utils.doc_to_target
 process_results: !function utils.process_results_gen
 generation_kwargs:
   until:
     - "\n"
 metric_list:
   - metric: rougeL
+    aggregation: mean
+    higher_is_better: true
+  - metric: rouge1
+    aggregation: mean
+    higher_is_better: true
+  - metric: rouge2
     aggregation: mean
     higher_is_better: true
   - metric: bleu
