--- a/lm_eval/tasks/toxigen_generation/toxigen_generation_asian.yaml
+++ b/lm_eval/tasks/toxigen_generation/toxigen_generation_asian.yaml
@@ -1,4 +1,4 @@
 include: toxigen_generation.yaml
-task: toxigen_generation_black
+task: toxigen_generation_asian
 dataset_name: annotated
-process_docs: !function utils.filter_black
+process_docs: !function utils.filter_asian
