--- a/lm_eval/tasks/toxigen_generation/toxigen_generation_native_american.yaml
+++ b/lm_eval/tasks/toxigen_generation/toxigen_generation_native_american.yaml
@@ -1,4 +1,4 @@
 include: toxigen_generation.yaml
-task: toxigen_generation_asian
+task: toxigen_generation_native_american
 dataset_name: annotated
-process_docs: !function utils.filter_asian
+process_docs: !function utils.filter_native_american
