--- a/tasks/winobias/winobias.yaml
+++ b/tasks/winobias/winobias.yaml
@@ -1,11 +1,11 @@
 task: winobias
 dataset_path: Elfsong/Wino_Bias
-output_type: generate_until
+output_type: loglikelihood
 training_split: train
 fewshot_split: train
 test_split: test
 doc_to_text: !function utils.doc_to_text
-doc_to_target: none
+doc_to_target: !function utils.doc_to_target
 process_results: !function utils.process_results
 generation_kwargs:
   until:
