--- a/tasks/benchmarks/bias_and_toxicity/bias_and_toxicity.yaml
+++ b/tasks/benchmarks/bias_and_toxicity/bias_and_toxicity.yaml
@@ -1,5 +1,6 @@
 group: bias_and_toxicity
 task:
+  - winobias
   - winobias_stereotypical
   - winobias_anti_stereotypical
   - bold_american_actors
