--- a/tasks/mir2023/MIR_es.yaml
+++ b/tasks/mir2023/MIR_es.yaml
@@ -1,7 +1,7 @@
-group: mir2023
-task: MIR_en
+group: mir
+task: MIR_es
 dataset_path: lurcelay/mir2023
-dataset_name: MIR_en
+dataset_name: MIR_es
 training_split: train
 test_split: train
 
