LAUNCH_CESGA <sbatch sbatch_vllm_med_and_bias0.sh> Yi-9B 0 shot MIR_en

--- a/tasks/mir2023/mir2023_en.yaml
+++ b/tasks/mir2023/mir2023_en.yaml
@@ -1,7 +1,7 @@
-group: mir
-task: MIR_en
+group: mir2023
+task: mir2023_en
 dataset_path: lurcelay/mir2023
-dataset_name: MIR_en
+dataset_name: mir2023_en
 training_split: train
 test_split: train
 
