--- a/tasks/mir2023/mir2023_es.yaml
+++ b/tasks/mir2023/mir2023_es.yaml
@@ -1,7 +1,7 @@
-group: mir
-task: MIR_en
+group: mir2023
+task: mir2023_es
 dataset_path: lurcelay/mir2023
-dataset_name: MIR_en
+dataset_name: mir2023_es
 training_split: train
 test_split: train
 
