--- a/tasks/ethos_generation/ethos_generation_religion.yaml
+++ b/tasks/ethos_generation/ethos_generation_religion.yaml
@@ -1,4 +1,4 @@
 include: _ethos_generation.yaml
-task: ethos_generation_disability
+task: ethos_generation_religion
 dataset_name: multilabel
-process_docs: !function utils.disability
+process_docs: !function utils.religion
