--- a/tasks/jigsaw_toxicity/jigsaw_toxicity.yaml
+++ b/tasks/jigsaw_toxicity/jigsaw_toxicity.yaml
@@ -11,7 +11,7 @@ generation_kwargs:
   until:
     - "\n"
 metric_list:
-  - metric: bias_score
+  - metric: jigsaw_toxicity
     aggregation: mean
     higher_is_better: true
 metadata:
